# Repository-RobotX

./: .gitmodules  README.md
ros2_ws/: .gitignore
ros2_ws/src/px4_exec/: CMakeLists.txt  package.xml
ros2_ws/src/px4_exec/msg/: AprilTagDetection.msg
ros2_ws/src/px4_exec/src/: apriltag_detector.cpp  landing_strategy.cpp  mavsdk_follow_agent.cpp  model_pose_pub.cpp
ros2_ws/src/robotx_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/robotx_bringup/launch/: main_usv_px4.launch.py  usv_px4_apriltags.launch.py
ros2_ws/src/robotx_bringup/robotx_bringup/: prep_wamv_with_tags.py  wait_for_gz.py
ros2_ws/src/robotx_bringup/rviz/: apriltag_detection.rviz
