<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_exec</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adcl@todo.todo">adcl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <!--Add the dependencies for the ROS2 publisher of the model position-->
  <depend>gz-transport12</depend>
  <depend>gz-msgs9</depend>

  <!-- Add the dependencies for hte landing strategy-->
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>

  <!-- Add the depenedncies for the ApriolTag detector-->
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
